set up contact mailer

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h1>Contact.html.erb</h1>
+  <h1>New.html.erb</h1>
   <%= form_with(model: @contact, url: contacts_create_path, method: :post) do |f| %>
     <% if flash[:success] %>
       <div class="alert alert-success">
