--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,1 +1,26 @@
-<h1>Welcome!</h1>
+<div class='container-fluid'>
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" style="width: 50%;">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src=<%= @image_1.link %> class="d-block w-100" alt=<%= @image_1.alt_text%>>
+      </div>
+      <div class="carousel-item">
+        <img src=<%= @image_2.link %> class="d-block w-100" alt=<%= @image_2.alt_text%>>
+      </div>
+      <div class="carousel-item">
+        <img src=<%= @image_3.link %> class="d-block w-100" alt=<%= @image_3.alt_text%>>
+      </div>
+      <div class="carousel-item">
+        <img src=<%= @image_4.link %> class="d-block w-100" alt=<%= @image_4.alt_text%>>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
