--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,20 +4,22 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "About", about_path, class: 'nav-link active' %>
-        </li>
-        <li class="nav-item">
+    <div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to "Gallery", gallery_path, class: 'nav-link active' %>
+            <%= link_to "About", about_path, class: 'nav-link active' %>
           </li>
           <li class="nav-item">
             <li class="nav-item">
-              <%= link_to "Contact", contact_path, class: 'nav-link active' %>
+              <%= link_to "Gallery", gallery_path, class: 'nav-link active' %>
             </li>
-          </ul>
+            <li class="nav-item">
+              <li class="nav-item">
+                <%= link_to "Contact", contact_path, class: 'nav-link active' %>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
