--- a/app/views/main/gallery.html.erb
+++ b/app/views/main/gallery.html.erb
@@ -1,2 +1,33 @@
-<h1>Main#gallery</h1>
-<p>Find me in app/views/main/gallery.html.erb</p>
+<div class="row align-items-start" style="margin: 2%;">
+  <div class="col">
+    <img src=<%= @image_1.link %> class="rounded mx-auto d-block" alt=<%= @image_1.alt_text%> style="max-width: 100%">
+  </div>
+  <div class="col">
+    <img src=<%= @image_2.link %> class="rounded mx-auto d-block" alt=<%= @image_2.alt_text%> style="max-width: 100%">
+  </div>
+  <div class="col">
+    <img src=<%= @image_4.link %> class="rounded mx-auto d-block" alt=<%= @image_4.alt_text%> style="max-width: 100%">
+  </div>
+</div>
+<div class="row align-items-start" style="margin: 2%;">
+  <div class="col">
+    <img src=<%= @image_10.link %> class="rounded mx-auto d-block" alt=<%= @image_10.alt_text%> style="max-width: 100%">
+  </div>
+  <div class="col">
+    <img src=<%= @image_5.link %> class="rounded mx-auto d-block" alt=<%= @image_5.alt_text%> style="max-width: 100%">
+  </div>
+  <div class="col">
+    <img src=<%= @image_11.link %> class="rounded mx-auto d-block" alt=<%= @image_11.alt_text%> style="max-width: 100%">
+  </div>
+</div>
+<div class="row align-items-start" style="margin: 2%;">
+  <div class="col">
+    <img src=<%= @image_12.link %> class="rounded mx-auto d-block" alt=<%= @image_12.alt_text%> style="max-width: 100%">
+  </div>
+  <div class="col">
+    <img src=<%= @image_8.link %> class="rounded mx-auto d-block" alt=<%= @image_8.alt_text%> style="max-width: 100%">
+  </div>
+  <div class="col">
+    <img src=<%= @image_9.link %> class="rounded mx-auto d-block" alt=<%= @image_9.alt_text%> style="max-width: 100%">
+  </div>
+</div>
