--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,4 +1,4 @@
-<div class="row align-items-start">
+<div class="row align-items-start" style="margin-top: 2%;">
   <div class="col">
     <img src=<%= @image_1.link %> class="img-fluid" alt=<%= @image_1.alt_text%>>
   </div>
